--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Activity 1: Basic HTML Bio</title>
+</head>
+
+<body>
+  <h1> My Bio</h1>
+
+  <h2> David Garcia</h2>
+
+  <p> I am a dad of 2 beautiful boys. They keep me very busy most of the time. I have learned so much from them and I
+    hope to learn more</p>
+
+
+</body>
+
+</html>
